unix/lang/tests/error/explicit_error_within_short_if.yab
#expect# Currently the wrong line is displayed
if (2>1) error "error"
